Versión final de la aplicación con PDF mejorado y base de datos

--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
         <p>
             <label for="sucursal">Sucursal:</label>
             <select id="sucursal" name="sucursal" required>
-                <option value="CP">CP</option>
-                <option value="BGA">BGA</option>
-                <option value="EAST">EAST</option>
-                <option value="WEST">WEST</option>
-                <option value="SF">SF</option>
-                <option value="DV">DV</option>
-                <option value="TA">TA</option>
+                <option value="">-- Seleccione una sucursal --</option>
+                <option value="Panamá Pacífico">Panamá Pacífico</option>
+                <option value="Costa del Este">Costa del Este</option>
+                <option value="Albrook">Albrook</option>
             </select>
         </p>
         <p>
@@ -46,7 +43,6 @@
                 <option value="Efectivo">Efectivo</option>
                 <option value="Tarjeta">Tarjeta</option>
                 <option value="Transferencia">Transferencia</option>
-                <option value="Yappy">Yappy</option>
             </select>
         </p>
         <p>
