--- a/recibo-template.html
+++ b/recibo-template.html
@@ -9,31 +9,30 @@
     <div class="receipt-container">
         <div class="header">
             <img src="{{logo}}" alt="Logo" class="logo">
-            <h1>RECIBO DE COMPRA - PGT LOGISTICS</h1>
+            <div class="company-details">
+                <h1>RECIBO DE COMPRA</h1>
+                <p>PGT Logistics</p>
+                <p>RUC: 155702607-2-2021</p>
+            </div>
         </div>
-        <div class="main-content">
-            <div class="customer-info">
-                <h2>Información del Cliente</h2>
-                <p><strong>Nombre:</strong> {{cliente}}</p>
-                <p><strong>Casillero:</strong> {{casillero}}</p>
-                <p><strong>Sucursal:</strong> {{sucursal}}</p>
+        <div class="customer-details">
+            <div class="billing-to">
+                <strong>Recibo Para:</strong>
+                <p>{{cliente}}</p>
+                <p>Casillero: {{casillero}}</p>
+                <p>Sucursal: {{sucursal}}</p>
             </div>
-            <div class="purchase-details">
-                <h2>Detalle de la Compra</h2>
-                <div class="item">
-                    <p class="description"><strong>Descripción:</strong> {{concepto}}</p>
-                    <p class="price"><strong>Total:</strong> ${{monto}}</p>
-                </div>
+            <div class="receipt-info">
+                <strong>Fecha:</strong>
+                <p>{{fecha}}</p>
             </div>
-            <div class="payment-info">
-                <p><strong>Pago realizado correctamente.</strong></p>
-                <p>Método de Pago: {{metodo_pago}}</p>
-            </div>
+        </div>
+        <div class="items-details">
+            <p class="concept"><strong>Concepto:</strong> {{concepto}}</p>
+            <p class="total"><strong>Total a Pagar:</strong> ${{monto}}</p>
         </div>
         <div class="footer">
-            <p>PGT Logistics - RUC: 155702607-2-2021</p>
-            <p>WhatsApp: +507 6197-3535 | Email: info@pgtlogistics.com | Web: www.pgtlogistics.com</p>
-            <p>¡Gracias por preferirnos!</p>
+            <p>¡Gracias por preferirnos y por su compra!</p>
         </div>
     </div>
 </body>
