Actualiza la lista de sucursales en el formulario

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
             <label for="sucursal">Sucursal:</label>
             <select id="sucursal" name="sucursal" required>
                 <option value="">-- Seleccione una sucursal --</option>
-                <option value="Panamá Pacífico">Panamá Pacífico</option>
-                <option value="Costa del Este">Costa del Este</option>
-                <option value="Albrook">Albrook</option>
+                <option value="DAV">DAV</option>
+                <option value="WEST">WEST</option>
+                <option value="BGA">BGA</option>
+                <option value="TA">TA</option>
+                <option value="SF">SF</option>
+                <option value="CP">CP</option>
+                <option value="EAST">EAST</option>
             </select>
         </p>
         <p>
