--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <option value="Efectivo">Efectivo</option>
                 <option value="Tarjeta">Tarjeta</option>
                 <option value="Transferencia">Transferencia</option>
+                <option value="Yappy">Yappy</option>
             </select>
         </p>
         <p>
